# tbg

./: Cargo.toml  README.md  TODO.md
docs/: 0_engineering_principles.md  1_rendering.md  2_data.md  3_intro.md  4_books.md  5_music.md  6_epics_and_stages.md  _index.md
src/: args.rs  lib.rs  main.rs  terminal_utils.rs
src/db/: connection.rs  mod.rs
src/db/seeds/: books.rs  characters.rs  dialogue.rs  mod.rs  non_player_characters.rs  pages.rs
src/db/seeds/dialogue/: character_creation.yaml  first_quest.yaml  (+1 more)
src/dev/: dev.rs
src/game_engine/: game_engine.rs  interface_mode.rs  mod.rs
src/game_engine/interactions/: mod.rs
src/game_engine/routines/: battle.rs  book_builder.rs  book_tutorial.rs  dialogue.rs  mod.rs  title_menu.rs  world_navigation.rs
src/models/: game_state.rs  mod.rs  player.rs  settings.rs
src/models/book/: book.rs  book_art_type.rs  inside_back_cover.rs  inside_front_cover.rs  page.rs
src/models/dialogue/: character_type.rs  decision.rs  dialogue.rs  dialogue_response.rs  mod.rs
src/models/game_state/: epic.rs  game_state.rs  main_arc.rs  mod.rs  stage.rs
src/models/non_player_character/: mod.rs  non_player_character.rs
src/models/player/: background.rs  gender.rs  height.rs  mod.rs  player.rs
src/music/: misty.rs  music_player.rs
src/tui/: menu.rs  mod.rs  window.rs
src/tui/book/: back_cover.rs  front_cover.rs  inside_back_cover.rs  inside_front_cover.rs  mod.rs  page.rs  spine.rs  spread.rs
src/world/: map.rs  map_file_utils.rs  mod.rs  navigation.rs  viewport.rs
tests/: game_state_tests.rs  mod.rs  player_tests.rs
(+10 files in other folders)
