[package]
name = "tbg"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"                                                # for terminal stuff
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
uuid = { version = "1.3", features = ["v4"] }                       # TODO: remove
chrono = "0.4"                                                      # for datetimes in the created_at and updated_at columns
cpal = "0.15"                                                       # for music (Cross-Platform Audio Library)
rand = "0.8"                                                        # used for randomness (alongside player seed, and in music)
regex = "1"
unicode-width = "0.1"                                               # for calculating padding w/ weird chars TODO: Remove this
sha2 = "0.10.8"                                                     # for generating player's seed
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"                                                  # for parsing dialogue from files
